fix: 修复Java24+无法加载插件的问题

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,4 +24,7 @@ kotlin.caching.enabled=true
 kotlin.parallel.tasks.in.project=true
 org.gradle.caching=true
 org.gradle.parallel=true
-org.gradle.jvmargs=-Xmx1024m
+org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
+
+# Java 8 路径配置
+org.gradle.java.home=F:\\dragonwell-8.20.21
